# AWB-CCM-sync

./: README.md  pyproject.toml
docs/: algorithm_details.md  data_schema.md  public_spectral_simulation.md
scripts/: run_simulation.py  run_spectral_simulation.py
src/awb_ccm_sync/: __init__.py  metrics.py  models.py  polynomial.py  simulation.py  spectral_simulation.py
tests/: test_models.py
