[project]
name = "awb-ccm-sync"
version = "0.1.0"
description = "Reference implementation for cross-module AWB/CCM synchronization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colour-science>=0.4.6",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
